package demo.ht.com.design_pattern.Iterator_pattern;

/**
 * @ClassName Student
 * 作者: szj
 * 时间: 2021/1/19 10:51
 * CSDN:https://blog.csdn.net/weixin_44819566
 * 公众号:码上变有钱
 */
public class Group {
    String name;

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public Group(String name) {
        this.name = name;
    }
}
